# Agentic-optimization-airfoil

./: README.md  graph.py  main.py  pyproject.toml
airfoil_opt/: graph.py  main.py  state.py
airfoil_opt/nodes/: analyze.py  design.py  evolve.py  mesh.py  simulate.py
airfoil_opt/utils/: cache.py  geometry.py  gmsh.py  openfoam.py  runner.py
base_case/: README.md
nodes/: analyze.py  evolve.py  simulate.py
openfoam/0/: U.template
src/: velocity.py
tests/: test_geometry.py  test_nodes.py
utils/: geometry.py  gmsh.py  openfoam.py
