[tool.poetry]
name = "agentic-optimization-airfoil"
version = "0.1.0"
description = "Integrated framework for autonomous airfoil aerodynamic optimization with LangGraph orchestration."
authors = ["Airfoil Optimization Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "airfoil_opt" }]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.39"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
